--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -71,3 +71,70 @@ body, input {
 .popup__content__close {
     cursor: pointer;
 }
+
+#basename-container {
+    display: none;
+    visibility: hidden;
+    height: 0;
+}
+
+.basenameContainer {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    max-width: 600px;
+}
+
+#basename{
+    max-width: 400px;
+}
+
+.index-container {
+    /* flex на весь экран */
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.index-header {
+    /* огромный заголовок */
+    font-size: 64px;
+    font-weight:400;
+    margin-bottom: 20px;
+}
+
+.index-wrapper {
+    /* обертка для кнопки */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.index-button-wrapper {
+    /* обертка для кнопки */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+#loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
